pom formatting clean up;